news validation fixes

--- a/src/templates/pages/news.html
+++ b/src/templates/pages/news.html
@@ -21,7 +21,7 @@
                         <video style="display: none;"><![endif]-->
                         <source srcset="img/1360x695_Toyota_2020.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/1360x695_Toyota_2020.jpg" type="image/jpg" title="Лучшие в металлургии"
+                        <img src="img/1360x695_Toyota_2020.jpg" title="Лучшие в металлургии"
                              alt="Лучшие в металлургии">
                     </picture>
                     <div class="card-body">
@@ -46,7 +46,7 @@
                         <video style="display: none;"><![endif]-->
                         <source srcset="img/ot.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/ot.jpg" type="image/jpg"
+                        <img src="img/ot.jpg"
                              title="Альметьевский трубный завод пополнил товарную линейку оцинкованными трубами"
                              alt="Альметьевский трубный завод пополнил товарную линейку оцинкованными трубами">
                     </picture>
@@ -72,7 +72,7 @@
                         <video style="display: none;"><![endif]-->
                         <source srcset="img/AA5J6740.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/AA5J6740.jpg" type="image/jpg"
+                        <img src="img/AA5J6740.jpg"
                              title="ОМК начала поставки рессор для обновленных автомобилей Ford Transit"
                              alt="ОМК начала поставки рессор для обновленных автомобилей Ford Transit">
                     </picture>
@@ -102,7 +102,7 @@
                         <video style="display: none;"><![endif]-->
                         <source srcset="img/IMG_9962_4k.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/IMG_9962_4k.jpg" type="image/jpg"
+                        <img src="img/IMG_9962_4k.jpg"
                              title="Производственный травматизм в 2019 году на предприятиях ОМК снизился на 43%"
                              alt="Производственный травматизм в 2019 году на предприятиях ОМК снизился на 43%">
                     </picture>
@@ -134,7 +134,7 @@
                         <video style="display: none;"><![endif]-->
                         <source srcset="img/PPU.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/PPU.jpg" type="image/jpg"
+                        <img src="img/PPU.jpg"
                              title="АТЗ пополнил товарную линейку трубами с внутренним антикоррозионным покрытием и тепловой изоляцией"
                              alt="АТЗ пополнил товарную линейку трубами с внутренним антикоррозионным покрытием и тепловой изоляцией">
                     </picture>
@@ -174,7 +174,7 @@
                         <video style="display: none;"><![endif]-->
                         <source srcset="img/IMG_9962_4k.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/IMG_9962_4k.jpg" type="image/jpg"
+                        <img src="img/IMG_9962_4k.jpg"
                              title="Производственный травматизм в 2019 году на предприятиях ОМК снизился на 43%"
                              alt="Производственный травматизм в 2019 году на предприятиях ОМК снизился на 43%">
                     </picture>
@@ -208,7 +208,7 @@
                         <video style="display: none;"><![endif]-->
                         <source srcset="img/ot.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/ot.jpg" type="image/jpg"
+                        <img src="img/ot.jpg"
                              title="Альметьевский трубный завод пополнил товарную линейку оцинкованными трубами"
                              alt="Альметьевский трубный завод пополнил товарную линейку оцинкованными трубами">
                     </picture>
@@ -231,7 +231,7 @@
                         <video style="display: none;"><![endif]-->
                         <source srcset="img/AA5J6740.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/AA5J6740.jpg" type="image/jpg"
+                        <img src="img/AA5J6740.jpg"
                              title="ОМК начала поставки рессор для обновленных автомобилей Ford Transit"
                              alt="ОМК начала поставки рессор для обновленных автомобилей Ford Transit">
                     </picture>
@@ -253,7 +253,7 @@
                         <video style="display: none;"><![endif]-->
                         <source srcset="img/P1024449.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/P1024449.jpg" type="image/jpg"
+                        <img src="img/P1024449.jpg"
                              title="ОМК начала поставки рессор для обновленных автомобилей Ford Transit"
                              alt="ОМК начала поставки рессор для обновленных автомобилей Ford Transit">
                     </picture>
@@ -278,7 +278,7 @@
                                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J7280.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
-                                    <img src="img/AA5J7280.jpg" type="image/jpg" title="Новые технологии на ВМЗ в 2019"
+                                    <img src="img/AA5J7280.jpg" title="Новые технологии на ВМЗ в 2019"
                                          alt="Новые технологии на ВМЗ в 2019">
                                 </picture>
                                 <div class="card-body">
@@ -303,7 +303,7 @@
                                     <video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J7280.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
-                                    <img src="img/AA5J7280.jpg" type="image/jpg" title="Новые технологии на ВМЗ в 2019"
+                                    <img src="img/AA5J7280.jpg" title="Новые технологии на ВМЗ в 2019"
                                          alt="Новые технологии на ВМЗ в 2019">
                                 </picture>
                                 <div class="card-body">
@@ -328,7 +328,7 @@
                                     <video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J7280.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
-                                    <img src="img/AA5J7280.jpg" type="image/jpg" title="Новые технологии на ВМЗ в 2019"
+                                    <img src="img/AA5J7280.jpg" title="Новые технологии на ВМЗ в 2019"
                                          alt="Новые технологии на ВМЗ в 2019">
                                 </picture>
                                 <div class="card-body">
@@ -353,7 +353,7 @@
                                     <video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J7280.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
-                                    <img src="img/AA5J7280.jpg" type="image/jpg" title="Новые технологии на ВМЗ в 2019"
+                                    <img src="img/AA5J7280.jpg" title="Новые технологии на ВМЗ в 2019"
                                          alt="Новые технологии на ВМЗ в 2019">
                                 </picture>
                                 <div class="card-body">
@@ -415,12 +415,15 @@
                                     </div>
                                     <h5 class="detours-card__title">Обход управляющего директора БАЗ цеха №1</h5>
                                 </div>
-                                <span class="detours-card__footer">
-                                     <div class="card-tags"><span class="badge">ВМЗ</span> <span
-                                             class="badge">ВМЗ</span> <span class="badge">ВМЗ</span> <span
-                                             class="badge">ВМЗ</span> <span class="badge">ВМЗ</span></div>
-
-                                </span>
+                                <div class="detours-card__footer">
+                                     <div class="card-tags">
+                                        <span class="badge">ВМЗ</span> 
+                                        <span class="badge">ВМЗ</span> 
+                                        <span class="badge">ВМЗ</span> 
+                                        <span class="badge">ВМЗ</span> 
+                                        <span class="badge">ВМЗ</span>
+                                    </div>
+                                </div>
                             </a>
                         </div>
                         <div class="swiper-slide">
@@ -444,9 +447,9 @@
                                     </div>
                                     <h5 class="detours-card__title">Обход управляющего директора ВМЗ всех цехов</h5>
                                 </div>
-                                <span class="detours-card__footer">
+                                <div class="detours-card__footer">
                                      <div class="card-tags"><span class="badge">ВМЗ</span></div>
-                                </span>
+                                </div>
                             </a>
                         </div>
                         <div class="swiper-slide">
@@ -469,9 +472,9 @@
                                     <h5 class="detours-card__title">Внеплановый обход управляющего директора БАЗ цеха
                                         №2</h5>
                                 </div>
-                                <span class="detours-card__footer">
+                                <div class="detours-card__footer">
                                      <div class="card-tags"><span class="badge">ВМЗ</span></div>
-                                </span>
+                                </div>
                             </a>
                         </div>
                         <div class="swiper-slide">
@@ -495,9 +498,9 @@
                                     </div>
                                     <h5 class="detours-card__title">Обход управляющего директора БАЗ цеха №1</h5>
                                 </div>
-                                <span class="detours-card__footer">
+                                <div class="detours-card__footer">
                                      <div class="card-tags"><span class="badge">ВМЗ</span></div>
-                                </span>
+                                </div>
                             </a>
                         </div>
                         <div class="swiper-slide">
@@ -522,9 +525,9 @@
                                     <h5 class="detours-card__title">Внеплановый обход управляющего директора БАЗ цеха
                                         №2</h5>
                                 </div>
-                                <span class="detours-card__footer">
+                                <div class="detours-card__footer">
                                      <div class="card-tags"><span class="badge">ВМЗ</span></div>
-                                </span>
+                                </div>
                             </a>
                         </div>
                     </div>
@@ -540,7 +543,7 @@
             <div class="col-12 header-block">
                 <h2>Видео</h2>
                 <div class="header-block__btn">
-                    <a href=#0" class="btn">Все видео <i class="btn__icon btn__icon--right btn__icon--arrow-right"></i></a>
+                    <a href="#0" class="btn">Все видео <i class="btn__icon btn__icon--right btn__icon--arrow-right"></i></a>
                 </div>
             </div>
         </div>
@@ -556,7 +559,7 @@
                                         <video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J7433.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
+                                        <img src="img/AA5J7433.jpg" title="" alt="">
                                     </picture>
                                     <video class="video__player" controls preload="auto">
                                         <source src="https://timflach.com/wp-content/uploads/2014/02/SELECT_04_cut.mp4" type="video/mp4">
@@ -580,7 +583,7 @@
                                         <video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J7433.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
+                                        <img src="img/AA5J7433.jpg" title="" alt="">
                                     </picture>
                                     <video class="video__player" controls preload="auto">
                                         <source src="https://timflach.com/wp-content/uploads/2014/02/SELECT_04_cut.mp4" type="video/mp4">
@@ -604,7 +607,7 @@
                                         <video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J7433.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
+                                        <img src="img/AA5J7433.jpg" title="" alt="">
                                     </picture>
                                     <video class="video__player" controls preload="auto">
                                         <source src="https://timflach.com/wp-content/uploads/2014/02/SELECT_04_cut.mp4" type="video/mp4">
@@ -628,7 +631,7 @@
                                         <video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J7433.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
+                                        <img src="img/AA5J7433.jpg" title="" alt="">
                                     </picture>
                                     <video class="video__player" controls preload="auto">
                                         <source src="https://timflach.com/wp-content/uploads/2014/02/SELECT_04_cut.mp4" type="video/mp4">
@@ -657,7 +660,7 @@
             <div class="col-12 header-block">
                 <h2>Статьи из прессы</h2>
                 <div class="header-block__btn">
-                    <a href=#0" class="btn">Все cтатьи <i class="btn__icon btn__icon--right btn__icon--arrow-right"></i></a>
+                    <a href="#0" class="btn">Все cтатьи <i class="btn__icon btn__icon--right btn__icon--arrow-right"></i></a>
                 </div>
             </div>
         </div>
