--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -120,6 +120,10 @@ body {
     outline: none;
     opacity: 1;
 
+    @media (max-width: 576px) {
+        display: none !important;
+    }
+
     &-prev {
         left: -8px;
         background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath d='M0 0H24V24H0z'/%3E%3Cpath stroke='%231A1A1A' stroke-width='1.8' d='M9 6L3 12 9 18'/%3E%3Cpath stroke='%231A1A1A' stroke-width='2' d='M4 12L21 12'/%3E%3C/g%3E%3C/svg%3E%0A");
