--- a/src/templates/pages/text-page.html
+++ b/src/templates/pages/text-page.html
@@ -1145,8 +1145,8 @@
                     на уровне 1,7%, в 2021 году — 3,1%, в 2022 году — 3,2%. Убедительного обоснования таких темпов роста
                     экономики, а также ускорения инвестиций в основной капитал в проекте федерального бюджета нет,
                     подчеркнул он.</p>
-                <p>Подробнее на РБК:<br>
-                    https://www.rbc.ru/economics/23/10/2019/5db000ca9a79471d3cd4d07e</p>
+                <p class="article__author">Подробнее на РБК:<br>
+                    <a href="#0">https://www.rbc.ru/economics/23/10/2019/5db000ca9a79471d3cd4d07e</a></p>
             </div>
         </div>
         
