--- a/src/blocks/modules/information-systems-search/information-systems-search.scss
+++ b/src/blocks/modules/information-systems-search/information-systems-search.scss
@@ -1,127 +1,125 @@
 .search {
-	position: relative;
-	width: 100%;
-	&.active {
-		.search__input {
-			background-color: $white;
-			border-radius: 5px 5px 0 0;
-		}
-	}
-	&__row {
-		position: relative;
-		z-index: 10;
-	}
-	&__input {
-		@include transition();
-		width: 100%;
-		padding: 11px 48px 15px;
-		border: 1px solid $silver-light;
-		font-size: 1rem;
-		line-height: 1.25;
-		background-color: $silver-light;
-		background-image: url("/img/icons/search-icon.svg");
-		background-size: 24px;
-		background-repeat: no-repeat;
-		background-position: 12px center;
-		border-radius: 5px;
-		&:focus {
-			background-color: $white;
-			border-radius: 5px 5px 0 0;
-			outline: none;
-		}
-		&::placeholder {
-			color: $text-silver;
-		}
-	}
-
-	&-dropdown {
-		position: absolute;
-		z-index: 1;
-		top: calc(100% - 1px);
-		left: 0;
-		width: 100%;
-		max-height: 370px;
-		background: $white;
-		border: 1px solid $silver-light;
-		display: none;
-		&__list {
-			list-style: none;
-			margin: 0;
-			padding: 0;
-		}
-		&__link {
-			@include transition();
-			display: flex;
-			align-items: center;
-			padding: 16px 24px;
-			&:hover {
-				text-decoration: none;
-				background: $silver-light;
-			}
-			.img {
-				display: block;
-				position: relative;
-				width: 32px;
-				min-width: 32px;
-				height: 32px;
-				border-radius: 50%;
-				overflow: hidden;
-				background: $text-black;
-				margin-right: 26px;
-				border-radius: 50%;
-			}
-			.text {
-				color: $text-black;
-				.red {
-					color: #f24c3d;
-				}
-			}
-		}
-		&__title {
-			font-size: 1rem;
-			line-height: 1.25;
-			font-weight: 300;
-			color: $text-silver;
-			padding: 20px 24px 8px;
-			margin: 0;
-		}
-	}
+    position: relative;
+    width: 100%;
 
 
-	//Стилизация скролла
-	.mCSB_scrollTools{
-	  width: 7px;
-	  opacity: 1;
-	  margin-right: 10px;
-	  .mCSB_draggerRail{
-	    width: 100%;
-	    background-color: transparent;
-	    border-radius: 0;
-	  }
-	  .mCSB_draggerContainer {
-	  	top: 4px;
-	  	bottom: 4px;
-	  }
-	  .mCSB_dragger{
-	    width: 100%;
-	    border-radius: 0;
+    //Стилизация скролла
+    .mCSB_scrollTools {
+        width: 7px;
+        opacity: 1;
+        margin-right: 10px;
+        .mCSB_draggerRail {
+            width: 100%;
+            background-color: transparent;
+            border-radius: 0;
+        }
+        .mCSB_draggerContainer {
+            top: 4px;
+            bottom: 4px;
+        }
+        .mCSB_dragger {
+            width: 100%;
+            border-radius: 0;
 
-	    .mCSB_dragger_bar{
-	      background-color: rgba(0, 0, 0, 0.4);
-	      width: 100%;
-	      border-radius: 3px;
-	    }
+            .mCSB_dragger_bar {
+                background-color: rgba(0, 0, 0, 0.4);
+                width: 100%;
+                border-radius: 3px;
+            }
 
-	    &.mCSB_dragger_onDrag, &:hover {
-	      .mCSB_dragger_bar {
-	        background-color: rgba(0, 0, 0, 0.4);
-	      }
-	    }
+            &.mCSB_dragger_onDrag, &:hover {
+                .mCSB_dragger_bar {
+                    background-color: rgba(0, 0, 0, 0.4);
+                }
+            }
+        }
+    }
 
-	  }
-	}
+    .mCSB_inside > .mCSB_container {
+        margin-right: 17px;
+    }
+    &__row {
+        position: relative;
+        z-index: 10;
+    }
+    &__input {
+        @include transition();
+        width: 100%;
+        border: 1px solid $silver-light;
+        padding: 11px 48px 15px;
+        font-size: 1rem;
+        line-height: 1.25;
+        background-color: $silver-light;
+        background-image: url('/img/icons/search-icon.svg');
+        background-size: 24px;
+        background-repeat: no-repeat;
+        background-position: 12px center;
+        border-radius: 5px;
+        &:focus {
+            background-color: $white;
+            border-radius: 5px 5px 0 0;
+            outline: none;
+        }
+        &::placeholder {
+            color: $text-silver;
+        }
+    }
+    &.active {
+        .search__input {
+            background-color: $white;
+            border-radius: 5px 5px 0 0;
+        }
+    }
 
-	.mCSB_inside>.mCSB_container{
-	  margin-right: 17px;
-	}
+    &-dropdown {
+        display: none;
+        position: absolute;
+        z-index: 1;
+        top: calc(100% - 1px);
+        left: 0;
+        width: 100%;
+        max-height: 370px;
+        border: 1px solid $silver-light;
+        background: $white;
+        &__list {
+            margin: 0;
+            padding: 0;
+            list-style: none;
+        }
+        &__link {
+            @include transition();
+            display: flex;
+            align-items: center;
+            padding: 16px 24px;
+            &:hover {
+                text-decoration: none;
+                background: $silver-light;
+            }
+            .img {
+                display: block;
+                position: relative;
+                width: 32px;
+                min-width: 32px;
+                height: 32px;
+                overflow: hidden;
+                border-radius: 50%;
+                background: $text-black;
+                margin-right: 26px;
+            }
+            .text {
+                color: $text-black;
+                .red {
+                    color: #f24c3d;
+                }
+            }
+        }
+        &__title {
+            margin: 0;
+            padding: 20px 24px 8px;
+            font-size: 1rem;
+            line-height: 1.25;
+            font-weight: 300;
+            color: $text-silver;
+        }
+    }
 }
