add spoiler add logo add form(start) small fix validation

--- a/src/styles/pages/text-page.scss
+++ b/src/styles/pages/text-page.scss
@@ -185,6 +185,7 @@
     p {
         margin-bottom: 32px;
         font-size: rem(20);
+        font-weight: $font-weight-light;
         line-height: 1.6;
         letter-spacing: normal;
         color: $black;
