--- a/src/templates/pages/best-practics.html
+++ b/src/templates/pages/best-practics.html
@@ -31,7 +31,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="..." type="image/jpg" title="" alt="...">
+                        <img src="..."   title="" alt="...">
                     </picture>
                     <div class="card-body">
                         <h5 class="card-title">Лучшие в металлургии</h5>
@@ -47,7 +47,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="..." type="image/jpg" title="" alt="...">
+                        <img src="..."   title="" alt="...">
                     </picture>
                     <div class="card-body">
                         <h5 class="card-title">Лучшие в металлургии</h5>
@@ -63,7 +63,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="..." type="image/jpg" title="" alt="...">
+                        <img src="..."   title="" alt="...">
                     </picture>
                     <div class="card-body">
                         <h5 class="card-title">Лучшие в металлургии</h5>
@@ -88,7 +88,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="..." type="image/jpg" title="" alt="...">
+                        <img src="..."   title="" alt="...">
                     </picture>
                     <div class="card-body">
                         <h5 class="card-title">Лучшие в металлургии</h5>
@@ -104,7 +104,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="..." type="image/jpg" title="" alt="...">
+                        <img src="..."   title="" alt="...">
                     </picture>
                     <div class="card-body">
                         <h5 class="card-title">Лучшие в металлургии</h5>
@@ -120,7 +120,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="..." type="image/jpg" title="" alt="...">
+                        <img src="..."   title="" alt="...">
                     </picture>
                     <div class="card-body">
                         <h5 class="card-title">Лучшие в металлургии</h5>
@@ -142,7 +142,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="..." type="image/jpg" title="" alt="...">
+                        <img src="..."   title="" alt="...">
                     </picture>
                     <div class="card-body">
                         <h5 class="card-title">Лучшие в металлургии</h5>
@@ -162,7 +162,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="..." type="image/jpg" title="" alt="...">
+                        <img src="..."   title="" alt="...">
                     </picture>
                     <div class="card-body">
                         <h5 class="card-title">Лучшие в металлургии</h5>
