--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -13,7 +13,7 @@
                                 <video style="display: none;"><![endif]-->
                                 <source srcset="img/AA5J7280.webp" type="image/webp">
                                 <!--[if IE 9]></video><![endif]-->
-                                <img src="img/AA5J7280.jpg" type="image/jpg" title="Новые технологии на ВМЗ в 2019"
+                                <img src="img/AA5J7280.jpg"   title="Новые технологии на ВМЗ в 2019"
                                      alt="Новые технологии на ВМЗ в 2019">
                             </picture>
                             <div class="card-body">
@@ -36,7 +36,7 @@
                                 <video style="display: none;"><![endif]-->
                                 <source srcset="img/AA5J7280.webp" type="image/webp">
                                 <!--[if IE 9]></video><![endif]-->
-                                <img src="img/AA5J7280.jpg" type="image/jpg" title="Новые технологии на ВМЗ в 2019"
+                                <img src="img/AA5J7280.jpg"   title="Новые технологии на ВМЗ в 2019"
                                      alt="Новые технологии на ВМЗ в 2019">
                             </picture>
                             <div class="card-body">
@@ -61,7 +61,7 @@
                                 <video style="display: none;"><![endif]-->
                                 <source srcset="img/AA5J7280.webp" type="image/webp">
                                 <!--[if IE 9]></video><![endif]-->
-                                <img src="img/AA5J7280.jpg" type="image/jpg" title="Новые технологии на ВМЗ в 2019"
+                                <img src="img/AA5J7280.jpg"   title="Новые технологии на ВМЗ в 2019"
                                      alt="Новые технологии на ВМЗ в 2019">
                             </picture>
                             <div class="card-body">
@@ -86,7 +86,7 @@
                                 <video style="display: none;"><![endif]-->
                                 <source srcset="img/AA5J7280.webp" type="image/webp">
                                 <!--[if IE 9]></video><![endif]-->
-                                <img src="img/AA5J7280.jpg" type="image/jpg" title="Новые технологии на ВМЗ в 2019"
+                                <img src="img/AA5J7280.jpg"   title="Новые технологии на ВМЗ в 2019"
                                      alt="Новые технологии на ВМЗ в 2019">
                             </picture>
                             <div class="card-body">
