--- a/src/templates/pages/ps-main.html
+++ b/src/templates/pages/ps-main.html
@@ -181,7 +181,7 @@
                                             <video style="display: none;"><![endif]-->
                                             <source srcset="img/AA5J7433.webp" type="image/webp">
                                             <!--[if IE 9]></video><![endif]-->
-                                            <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
+                                            <img src="img/AA5J7433.jpg"   title="" alt="">
                                         </picture>
                                     </a>
                                 </div>
@@ -208,7 +208,7 @@
                                         <video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J7433.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
+                                        <img src="img/AA5J7433.jpg"   title="" alt="">
                                     </picture>
                                     <video class="video__player" controls preload="auto">
                                         <source src="https://timflach.com/wp-content/uploads/2014/02/SELECT_04_cut.mp4" type="video/mp4">
@@ -241,7 +241,7 @@
                                         <video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J7433.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
+                                        <img src="img/AA5J7433.jpg"   title="" alt="">
                                     </picture>
                                     <video class="video__player" controls preload="auto">
                                         <source src="https://timflach.com/wp-content/uploads/2014/02/SELECT_04_cut.mp4" type="video/mp4">
@@ -274,7 +274,7 @@
                                         <video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J7433.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
+                                        <img src="img/AA5J7433.jpg"   title="" alt="">
                                     </picture>
                                     <video class="video__player" controls preload="auto">
                                         <source src="https://timflach.com/wp-content/uploads/2014/02/SELECT_04_cut.mp4" type="video/mp4">
@@ -330,7 +330,7 @@
                         <video style="display: none;"><![endif]-->
                         <source srcset="img/1360x695_Toyota_2020.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/1360x695_Toyota_2020.jpg" type="image/jpg" title="Лучшие в металлургии"
+                        <img src="img/1360x695_Toyota_2020.jpg"   title="Лучшие в металлургии"
                              alt="Лучшие в металлургии">
                     </picture>
                     <div class="card-body">
@@ -356,7 +356,7 @@
                         <video style="display: none;"><![endif]-->
                         <source srcset="img/ot.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/ot.jpg" type="image/jpg"
+                        <img src="img/ot.jpg"
                              title="Альметьевский трубный завод пополнил товарную линейку оцинкованными трубами"
                              alt="Альметьевский трубный завод пополнил товарную линейку оцинкованными трубами">
                     </picture>
@@ -382,7 +382,7 @@
                         <video style="display: none;"><![endif]-->
                         <source srcset="img/AA5J6740.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/AA5J6740.jpg" type="image/jpg"
+                        <img src="img/AA5J6740.jpg"
                              title="ОМК начала поставки рессор для обновленных автомобилей Ford Transit"
                              alt="ОМК начала поставки рессор для обновленных автомобилей Ford Transit">
                     </picture>
@@ -412,7 +412,7 @@
                         <video style="display: none;"><![endif]-->
                         <source srcset="img/IMG_9962_4k.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/IMG_9962_4k.jpg" type="image/jpg"
+                        <img src="img/IMG_9962_4k.jpg"
                              title="Производственный травматизм в 2019 году на предприятиях ОМК снизился на 43%"
                              alt="Производственный травматизм в 2019 году на предприятиях ОМК снизился на 43%">
                     </picture>
