--- a/src/templates/pages/security.html
+++ b/src/templates/pages/security.html
@@ -18,7 +18,7 @@
                                 <video style="display: none;"><![endif]-->
                                 <source srcset="img/AA5J7433.webp" type="image/webp">
                                 <!--[if IE 9]></video><![endif]-->
-                                <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
+                                <img src="img/AA5J7433.jpg"   title="" alt="">
                             </picture>
                         </a>
                     </div>
@@ -46,7 +46,7 @@
                             <video style="display: none;"><![endif]-->
                             <source srcset="img/AA5J7433.webp" type="image/webp">
                             <!--[if IE 9]></video><![endif]-->
-                            <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
+                            <img src="img/AA5J7433.jpg"   title="" alt="">
                         </picture>
                         <video class="video__player" controls preload="auto">
                             <source src="https://timflach.com/wp-content/uploads/2014/02/SELECT_04_cut.mp4" type="video/mp4">
@@ -81,7 +81,7 @@
                                 <video style="display: none;"><![endif]-->
                                 <source srcset="img/AA5J7433.webp" type="image/webp">
                                 <!--[if IE 9]></video><![endif]-->
-                                <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
+                                <img src="img/AA5J7433.jpg"   title="" alt="">
                             </picture>
                         </a>
                     </div>
@@ -109,7 +109,7 @@
                             <video style="display: none;"><![endif]-->
                             <source srcset="img/AA5J7433.webp" type="image/webp">
                             <!--[if IE 9]></video><![endif]-->
-                            <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
+                            <img src="img/AA5J7433.jpg"   title="" alt="">
                         </picture>
                         <video class="video__player" controls preload="auto">
                             <source src="https://timflach.com/wp-content/uploads/2014/02/SELECT_04_cut.mp4" type="video/mp4">
@@ -144,7 +144,7 @@
                                 <video style="display: none;"><![endif]-->
                                 <source srcset="img/AA5J7433.webp" type="image/webp">
                                 <!--[if IE 9]></video><![endif]-->
-                                <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
+                                <img src="img/AA5J7433.jpg"   title="" alt="">
                             </picture>
                         </a>
                     </div>
@@ -172,7 +172,7 @@
                             <video style="display: none;"><![endif]-->
                             <source srcset="img/AA5J7433.webp" type="image/webp">
                             <!--[if IE 9]></video><![endif]-->
-                            <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
+                            <img src="img/AA5J7433.jpg"   title="" alt="">
                         </picture>
                         <video class="video__player" controls preload="auto">
                             <source src="https://timflach.com/wp-content/uploads/2014/02/SELECT_04_cut.mp4" type="video/mp4">
@@ -207,7 +207,7 @@
                                 <video style="display: none;"><![endif]-->
                                 <source srcset="img/AA5J7433.webp" type="image/webp">
                                 <!--[if IE 9]></video><![endif]-->
-                                <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
+                                <img src="img/AA5J7433.jpg"   title="" alt="">
                             </picture>
                         </a>
                     </div>
@@ -235,7 +235,7 @@
                             <video style="display: none;"><![endif]-->
                             <source srcset="img/AA5J7433.webp" type="image/webp">
                             <!--[if IE 9]></video><![endif]-->
-                            <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
+                            <img src="img/AA5J7433.jpg"   title="" alt="">
                         </picture>
                         <video class="video__player" controls preload="auto">
                             <source src="https://timflach.com/wp-content/uploads/2014/02/SELECT_04_cut.mp4" type="video/mp4">
@@ -270,7 +270,7 @@
                                 <video style="display: none;"><![endif]-->
                                 <source srcset="img/AA5J7433.webp" type="image/webp">
                                 <!--[if IE 9]></video><![endif]-->
-                                <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
+                                <img src="img/AA5J7433.jpg"   title="" alt="">
                             </picture>
                         </a>
                     </div>
@@ -298,7 +298,7 @@
                             <video style="display: none;"><![endif]-->
                             <source srcset="img/AA5J7433.webp" type="image/webp">
                             <!--[if IE 9]></video><![endif]-->
-                            <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
+                            <img src="img/AA5J7433.jpg"   title="" alt="">
                         </picture>
                         <video class="video__player" controls preload="auto">
                             <source src="https://timflach.com/wp-content/uploads/2014/02/SELECT_04_cut.mp4" type="video/mp4">
