add video modal + add gallery sliders and modal slider connections.

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -6,6 +6,7 @@
 @import 'modules/gallery/gallery';
 @import 'modules/galleryThumbs/galleryThumbs';
 @import 'modules/galleryPopup/galleryPopup';
+@import 'modules/videoPopup/videoPopup';
 @import 'modules/comments/comments';
 @import 'modules/likeItem/likeItem';
 @import 'modules/practices/practices__widget';
