add select add datapicker

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -15,3 +15,4 @@
 @import 'modules/text-logo/text-logo';
 @import 'modules/universal-form/universal-form';
 @import 'modules/document-list/document-list';
+@import "modules/select/select";
