--- a/src/templates/pages/news.html
+++ b/src/templates/pages/news.html
@@ -12,6 +12,22 @@
                 <h1>Новости</h1>
             </div>
         </div>
+        <div class="row">
+            <div class="col-12">
+                <form action="" class="sorting-form">
+                    <select name="" id="" class="sorting-form__select select-js">
+                        <option value="">Все площадки</option>
+                        <option value="">Альметьевск</option>
+                        <option value="">Москва</option>
+                        <option value="">Челябинск</option>
+                        <option value="">Уфа</option>
+                        <option value="">Благовещенск</option>
+                        <option value="">Чусовой</option>
+                        <option value="">Выкса</option>
+                    </select>
+                </form>
+            </div>
+        </div>
         <div class="row news__row">
             <!--        первая большая новость-->
             <div class="col-12">
