styling select start develop data-select

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -16,4 +16,5 @@
 @import 'modules/text-logo/text-logo';
 @import 'modules/universal-form/universal-form';
 @import 'modules/document-list/document-list';
-@import "modules/select/select";
+@import 'modules/select/select';
+@import 'modules/dataselect/dataselect';
