--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -185,3 +185,9 @@ body {
     }
 }
 
+.sorting-form {
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 32px;
+    margin-left: -16px;
+}
