--- a/src/blocks/modules/select/select.scss
+++ b/src/blocks/modules/select/select.scss
@@ -1,2 +1,87 @@
-@import "node_modules/bootstrap-select/dist/css/bootstrap-select.min.css";
+.sorting-form__select {
+    display: block;
+    position: relative;
+    width: auto !important;
+    margin-right: 16px;
 
+    .btn {
+        position: relative;
+        z-index: 11;
+        width: auto;
+        overflow: hidden;
+        padding: 4px 36px 8px 16px;
+        border-radius: 16px;
+        box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
+        background-color: $white;
+        &:focus {
+            outline: none!important;
+        }
+
+        &:after {
+            content: '';
+            position: absolute;
+            top: 4px;
+            right: 8px;
+            width: 24px;
+            height: 24px;
+            transform: rotate(90deg);
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='24' viewBox='0 0 25 24'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath d='M.23 0h24v24h-24z'/%3E%3Cpath stroke='%2300000A' stroke-width='1.8' d='M9.23 6l6 6-6 6'/%3E%3C/g%3E%3C/svg%3E");
+            background-size: contain;
+            background-repeat: no-repeat;
+        }
+
+        .filter-option-inner-inner {
+            font-size: rem(16);
+            font-weight: $font-weight-light;
+            line-height: 1.25;
+            letter-spacing: normal;
+            color: $text-black;
+        }
+    }
+
+    .dropdown-menu {
+        display: none;
+        position: absolute;
+        z-index: 10;
+        top: 100%;
+        background-color: $white;
+        border-radius: 5px;
+        box-shadow: 0 8px 40px 0 rgba(0, 0, 0, 0.2);
+        background-color: #ffffff;
+        opacity: 0;
+        min-width: 184px;
+        padding: 8px 0;
+
+        &.show {
+            display: block;
+            top: 8px !important;
+            opacity: 1;
+        }
+
+
+        li {
+            position: relative;
+            padding: 6px 40px 10px 40px;
+            font-size: rem(16);
+            font-weight: $font-weight-light;
+            line-height: 1.25;
+            color: $text-black;
+            &:hover {
+                background-color: $silver-light;
+            }
+            &.selected.active {
+                &:before {
+                    content: '';
+                    position: absolute;
+                    top: 6px;
+                    left: 8px;
+                    width: 24px;
+                    height: 24px;
+                    background-image: url("data:image/svg+xml,%3Csvg width='24px' height='24px' viewBox='0 0 24 24' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cg id='Page-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cg id='desktop-tech-date-dropdown' transform='translate(-72.000000, -118.000000)'%3E%3Cg id='icon/M/ok/light' transform='translate(72.000000, 118.000000)'%3E%3Cg id='icon'%3E%3Cg id='Group'%3E%3Crect id='Rectangle' x='0' y='0' width='24' height='24'%3E%3C/rect%3E%3Cpolyline id='Path' stroke='%231A1A1A' stroke-width='2' points='5 12 9 16 19 6'%3E%3C/polyline%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+                    background-position: center;
+                    background-size: contain;
+                }
+            }
+        }
+    }
+}
