--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -18,3 +18,4 @@
 @import 'modules/document-list/document-list';
 @import 'modules/select/select';
 @import 'modules/dataselect/dataselect';
+@import 'modules/unknown/unknown';
