--- a/src/templates/pages/news.html
+++ b/src/templates/pages/news.html
@@ -841,6 +841,8 @@
         </div>
     </section>
 
+    {% include 'unknown/unknown.html' %}
+
     <div class="tags">
         <div class="row">
             <div class="col-12 tags-col">
