--- a/src/blocks/modules/unknown/unknown.scss
+++ b/src/blocks/modules/unknown/unknown.scss
@@ -9,6 +9,7 @@
 
     &-modal {
         .thumbs-slider {
+            background: $text-black;
             .swiper-button {
                 top: 50%;
                 transform: translateY(-50%);
@@ -17,6 +18,18 @@
         .swiper {
             &-slide {
                 width: auto;
+                max-width: 100%;
+                picture {
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    img {
+                        max-width: 100%;
+                        position: relative;
+                        top: 50%;
+                        transform: translateY(-50%);
+                    }
+                }
             }
         }
     }
