--- a/src/blocks/modules/unknown/unknown.scss
+++ b/src/blocks/modules/unknown/unknown.scss
@@ -8,26 +8,42 @@
     }
 
     &-modal {
-        .thumbs-slider {
-            background: $text-black;
-            .swiper-button {
-                top: 50%;
-                transform: translateY(-50%);
+        .modal-content {
+            .thumbs-slider {
+                background: $text-black;
+
+                .swiper-button {
+                    top: 50%;
+                    transform: translateY(-50%);
+                }
+
+                &__nav {
+                    top: auto;
+                    bottom: 0;
+                }
+
             }
         }
+
         .swiper {
             &-slide {
                 width: auto;
                 max-width: 100%;
+
                 picture {
                     display: block;
+                    position: relative;
                     width: 100%;
-                    height: 100%;
+                    height: 0;
+                    padding-bottom: 66.3%;
+
                     img {
-                        max-width: 100%;
-                        position: relative;
+                        position: absolute;
                         top: 50%;
-                        transform: translateY(-50%);
+                        left: 50%;
+                        max-width: 100%;
+                        max-height: 100%;
+                        transform: translate(-50%, -50%);
                     }
                 }
             }
