styling select start develop data-select

--- a/src/blocks/modules/dataselect/dataselect.scss
+++ b/src/blocks/modules/dataselect/dataselect.scss
@@ -1,40 +1,45 @@
 .data-select {
-    position: relative;
+	position: relative;
 
-    &__btn {
-        width: auto;
-        overflow: hidden;
-        padding: 4px 36px 8px 16px;
-        border-radius: 16px;
-        box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
-        background-color: $white;
-        font-size: rem(16);
-        font-weight: $font-weight-light;
-        line-height: 1.25;
-        letter-spacing: normal;
-        color: $text-black;
-      border: none;
+	&__btn {
+		position: relative;
+		width: auto;
+		overflow: hidden;
+		border: none;
+		padding: 4px 36px 8px 16px;
+		border-radius: 16px;
+		box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
+		background-color: $white;
+		font-size: rem(16);
+		font-weight: $font-weight-light;
+		line-height: 1.25;
+		letter-spacing: normal;
+		color: $text-black;
 
-        &:after {
-            content: '';
-            position: absolute;
-            top: 4px;
-            right: 8px;
-            width: 24px;
-            height: 24px;
-            transform: rotate(90deg);
-            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='24' viewBox='0 0 25 24'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath d='M.23 0h24v24h-24z'/%3E%3Cpath stroke='%2300000A' stroke-width='1.8' d='M9.23 6l6 6-6 6'/%3E%3C/g%3E%3C/svg%3E");
-            background-size: contain;
-            background-repeat: no-repeat;
-        }
-    }
+		&:after {
+			content: '';
+			position: absolute;
+			top: 4px;
+			right: 8px;
+			width: 24px;
+			height: 24px;
+			transform: rotate(90deg);
+			background-image: url('data:image/svg+xml,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' width=\'25\' height=\'24\' viewBox=\'0 0 25 24\'%3E%3Cg fill=\'none\' fill-rule=\'evenodd\'%3E%3Cpath d=\'M.23 0h24v24h-24z\'/%3E%3Cpath stroke=\'%2300000A\' stroke-width=\'1.8\' d=\'M9.23 6l6 6-6 6\'/%3E%3C/g%3E%3C/svg%3E');
+			background-size: contain;
+			background-repeat: no-repeat;
+		}
+	}
 
-    &__data-input {
-      position: absolute;
-      opacity: 0;
-      top: 0;
-      left: 0;
-      pointer-events: none;
-      z-index: 0;
-    }
+	&__result {
+		display: none;
+	}
+
+	&__data-input {
+		position: absolute;
+		z-index: 0;
+		top: 0;
+		left: 0;
+		opacity: 0;
+		pointer-events: none;
+	}
 }
